[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/elements/alienPink_round.png" type="Texture" id=1]
[ext_resource path="res://Rotator.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/particleCartoonStar.png" type="Texture" id=3]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=8]
radius = 35.0

[sub_resource type="CircleShape2D" id=9]
radius = 22.0

[sub_resource type="CircleShape2D" id=10]
radius = 11.5

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.508108, 0.994595 )
colors = PoolColorArray( 0.647666, 0, 0.742676, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 1.4, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=11]
radius = 36.0

[node name="Rotator" type="Node2D"]
script = ExtResource( 2 )

[node name="Pivot" type="Sprite" parent="."]
position = Vector2( 300, 300 )

[node name="Label" type="Label" parent="Pivot"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="Pivot"]

[node name="Indicator" type="Sprite" parent="Pivot/Node2D"]
position = Vector2( 0, 225 )
z_index = 2
texture = ExtResource( 1 )

[node name="Okay" type="Area2D" parent="Pivot/Node2D/Indicator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Node2D/Indicator/Okay"]
shape = SubResource( 8 )

[node name="Good" type="Area2D" parent="Pivot/Node2D/Indicator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Node2D/Indicator/Good"]
shape = SubResource( 9 )

[node name="Perfect" type="Area2D" parent="Pivot/Node2D/Indicator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Node2D/Indicator/Perfect"]
shape = SubResource( 10 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Pivot/Node2D/Indicator"]
visible = false
amount = 24
lifetime = 0.5
randomness = 1.0
lifetime_randomness = 0.5
local_coords = false
texture = ExtResource( 3 )
spread = 180.0
gravity = Vector2( 1, 1 )
initial_velocity = 55.0
initial_velocity_random = 0.5
angular_velocity = 180.0
angular_velocity_random = 1.0
linear_accel = 180.0
linear_accel_random = 1.0
radial_accel = 50.0
radial_accel_random = 1.0
damping = 50.0
damping_random = 1.0
angle = 180.0
angle_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
color_ramp = SubResource( 5 )
hue_variation = 0.07
hue_variation_random = 1.0

[node name="Trail2D" type="Line2D" parent="Pivot/Node2D/Indicator"]
z_index = 1
z_as_relative = false
width = 4.0
width_curve = SubResource( 4 )
default_color = Color( 1, 1, 1, 1 )
texture_mode = 1
joint_mode = 2
end_cap_mode = 2
sharp_limit = 16.0
round_precision = 16
antialiased = true
script = ExtResource( 4 )
lifetime = 3.0

[node name="Dropoff" type="Position2D" parent="Pivot/Node2D"]
position = Vector2( 225, 0 )

[node name="Area2D" type="Area2D" parent="Pivot/Node2D/Dropoff"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Node2D/Dropoff/Area2D"]
shape = SubResource( 11 )

[node name="KeyDrop" type="Timer" parent="."]
autostart = true

[node name="BeatTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="area_entered" from="Pivot/Node2D/Indicator/Okay" to="." method="_on_Okay_area_entered"]
[connection signal="area_exited" from="Pivot/Node2D/Indicator/Okay" to="." method="_on_Okay_area_exited"]
[connection signal="area_entered" from="Pivot/Node2D/Indicator/Good" to="." method="_on_Good_area_entered"]
[connection signal="area_exited" from="Pivot/Node2D/Indicator/Good" to="." method="_on_Good_area_exited"]
[connection signal="area_entered" from="Pivot/Node2D/Indicator/Perfect" to="." method="_on_Perfect_area_entered"]
[connection signal="area_exited" from="Pivot/Node2D/Indicator/Perfect" to="." method="_on_Perfect_area_exited"]
[connection signal="area_entered" from="Pivot/Node2D/Dropoff/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Pivot/Node2D/Dropoff/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="KeyDrop" to="." method="_on_KeyDrop_timeout"]
[connection signal="timeout" from="BeatTimer" to="." method="_on_BeatTimer_timeout"]
